# ai-introduction

./: .env.example  Makefile  README.md  compose.yml
app/web/: main.py  pyproject.toml
app/web/components/iris/graph/: perceptron.py
app/web/components/iris/table/: dataframe.py
app/web/dataset/project_member_assignment/: member.csv  project.csv
app/web/pages/: iris.py  project_member_assignment.py
app/web/service/project_member_assignment/: __init__.py  assignment_optimizer.py  assignment_usecase.py  member_entity.py  member_repository.py  member_value.py  project_entity.py  project_repository.py
app/web/services/core/: adaline_gd.py  adaline_sgd.py  perceptron.py
app/web/services/iris/: dataframe.py  perceptron.py  util.py
docker/web/: Dockerfile
