[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["fumizaki"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.2"
matplotlib = "^3.9.3"
pulp = "^2.9.0"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
